--- a/package.json
+++ b/package.json
@@ -7,18 +7,24 @@
     "start": "electron .",
     "win64": "./node_modules/.bin/electron-builder --x64",
     "win32": "./node_modules/.bin/electron-builder --ia32",
-    "mac": "./node_modules/.bin/electron-builder --mac"
+    "mac": "./node_modules/.bin/electron-builder --mac",
+    "linux-snap": "electron-builder --linux snap"
   },
   "repository": "https://github.com/chitosai/bilimini",
   "author": "TheC",
   "devDependencies": {
     "electron": "^7.2.4",
-    "electron-builder": "next"
+    "electron-builder": "^22.8.1"
   },
   "build": {
     "mac": {
       "category": "Network"
+    },
+    "linux":{
+      "category": "Network",
+      "icon": "./images/icon480.png"
     }
+    
   },
   "dependencies": {
     "electron-is-accelerator": "^0.1.2",
